--- a/202121873_황호준_기계학습_기말.ipynb
+++ b/202121873_황호준_기계학습_기말.ipynb
@@ -1510,7 +1510,7 @@
         "\n",
         "이후 그리드 서치를 위한 하이퍼파라미터를 설정하고, 다양한 하이퍼파라미터 조합을 통해 최적의 모델을 찾기 위해 여러가지 옵션을 지정한 뒤 교차검증을 통해 모델을 학습시킵니다.\n",
         "\n",
-        "최적의 하이퍼파라미터 조합은 C:10에서 가장 최적의 결과를 보였고, 교차점수는 약 94%임을 확인합니다."
+        "최적의 하이퍼파라미터 조합은 'C': 10, 'penalty': 'l1', 'solver': 'liblinear'에서 가장 최적의 결과를 보였고, 교차점수는 약 94%임을 확인합니다."
       ]
     },
     {
@@ -1557,7 +1557,7 @@
         "id": "9YYjr13URwq7"
       },
       "source": [
-        "최적의 하이퍼 파라미터 값 C:10으로 학습된 모델을 사용하여 테스트 데이터를 예측합니다."
+        "최적의 하이퍼 파라미터 조합'C': 10, 'penalty': 'l1', 'solver': 'liblinear'으로 학습된 모델을 사용하여 테스트 데이터를 예측합니다."
       ]
     },
     {
